openshift-data-science/visualization-server/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: viewer
    viewer: my-viewer
  name: my-viewer
  namespace: redhat-ods-applications
spec:
  path: /tensorboard/my-viewer/
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: my-viewer-service
    weight: 100
  wildcardPolicy: None
